--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>brev.ly</title>
 </head>
 
-<body class="bg-white antialiased text-gray-600">
+<body class="bg-gray-200 antialiased text-gray-600">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
